<resources>
    <string name="app_name">Annotator</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_New_Session">Neue Session</string>
    <string name="tab_Annotation">Annotation</string>
    <string name="tab_Finalise">Abschließen</string>
    <string name="tab_Statistics">Statistik</string>

    <string name="title_Charakterisierung_der_situation">Charakterisierung der Situation</string>
    <string name="title_Neue_Datenaufnahme">Neue Datenaufnahme</string>

    <string name="subtitle_Lichtverh_ltnisse">Lichtverhältnisse</string>
    <string name="subtitle_Hoersituation_des_Probanden">Hörsituation des Probanden</string>
    <string name="subtitle_Raumbeschreibung">Raumbeschreibung</string>
    <string name="subtitle_Weitere_Angaben">Weitere Angaben / Besonderheiten zur Beobachtungssituation</string>
    <string name="subtitle_Laustaerke_der_Umgebungsgeraeusche">Lautstärke der Umgebungsgeräusche</string>

    <string name="option_sehr_hell">sehr hell</string>
    <string name="option_eher_hell">eher hell</string>
    <string name="option_mittel_angenehmes_Tageslicht">mittel - angenehmes Tageslicht</string>
    <string name="option_eher_dunkel">eher dunkel</string>
    <string name="option_sehr_dunkel">sehr dunkel</string>
    <string name="option_Hoergeraete_erfahren">Hörgeräte - erfahrener Hörgeräteträger</string>
    <string name="option_Hoergeraete_unerfahren">Hörgeräte - unerfahrener Hörgerätertäger</string>
    <string name="option_keine_Hoergeraete">keine Hörgeräte</string>
    <string name="option_grosser_geraeumiger_Raum">großer, geräumiger Raum</string>
    <string name="option_angemessene_Raumgroesse">angemessene Raumgröße</string>
    <string name="option_kleiner_beengter_Raum">kleiner, beengter Raum</string>
    <string name="option_sehr_leise">sehr leise / keine</string>
    <string name="option_leise">leise</string>
    <string name="option_mittel">mittel</string>
    <string name="option_laut">laut</string>
    <string name="option_sehr_laut">sehr laut</string>

    <string name="button_Ubeung">Übung</string>
    <string name="button_Messung">Experiment</string>
    <string name="button_Beginn">Start</string>
    <string name="button_Abschliessen">Abschließen</string>

    <string name="hint_Texteingabe_hier">Texteingabe hier</string>
    <string name="hint_Dateneingabe_Proband">Dateneingabe Proband</string>
    <string name="hint_Dateneingabe_Rater">Dateneingabe Rater</string>

    <string name="category_1">F-t-F DP_N PR_N</string>
    <string name="category_2">F-t-F DP_N PR_D</string>
    <string name="category_3">F-t-F DP_D PR_N</string>
    <string name="category_4">F-t-F DP_D PR_D</string>
    <string name="category_5">Gruppe PR_N</string>
    <string name="category_6">Gruppe PR_D</string>
    <string name="category_7">NichtSprache PR_N</string>
    <string name="category_8">NichtSprache PR_D</string>
    <string name="button_eraseLast">Letzten\nEintrag\nlöschen</string>

    <string name="output_Charakterisierung">Charakterisierung</string>

    <string name="result_ID_Rater">ID Rater</string>
    <string name="result_ID_Proband">ID Proband</string>
    <string name="result_Situation">Situation</string>
    <string name="result_Gesamtanzahl">Gesamtanzahl</string>
    <string name="result_Haeufigkeit">Haeufigkeit</string>
    <string name="result_Zusatzinformationen">Zusatzinformationen</string>
    <string name="result_freiText">Freitext</string>
    <string name="result_Zeit_Start">Zeit Start</string>
    <string name="result_Zeit_Ende">Zeit Ende</string>

    <string name="menu_insgesamt">Insgesamt</string>

</resources>
