<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_1"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_1"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_1"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_2"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_2"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_2"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_3"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_3"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_3"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_4"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_4"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_4"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_4"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_5"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_5"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_5"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_5"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_6"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_6"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_6"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_6"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_7"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_7"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_7"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_7"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hist_category_8"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_8"
            android:layout_margin="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar_8"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:backgroundTint="@color/annoDarkerBlue"
            android:progress="25"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/percentCategory_8"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:layout_margin="8dp"
            android:gravity="end"/>
    </LinearLayout>

</LinearLayout>