<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/radioContainerPadding"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Neue_Datenaufnahme"
        android:textSize="@dimen/textSizeHeadLine"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/buttonUebung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Ubeung"
        android:layout_marginTop="@dimen/radioElementsMargin"
        android:layout_marginBottom="@dimen/radioElementsMargin"/>

    <Button
        android:id="@+id/buttonMessung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Messung"
        android:layout_marginTop="@dimen/radioElementsMargin"
        android:layout_marginBottom="@dimen/radioElementsMargin"/>

    <TextView
        android:id="@+id/textViewCodenummerProband"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Codenummer Proband:"
        android:layout_marginTop="@dimen/radioElementsMargin"
        android:layout_marginBottom="@dimen/radioElementsMargin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextProband"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/textFieldHeight"
        android:inputType="textPersonName"
        android:ems="10"
        android:text=""
        android:padding="@dimen/editTextPaddingStart"
        android:hint="@string/hint_Dateneingabe"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/radioElementsMargin"
        android:layout_marginBottom="@dimen/radioElementsMargin"/>

        <TextView
            android:id="@+id/textViewFehlerhaftProband"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fehlerhafte Eingabe"
            android:textColor="@color/annoRed"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:visibility="invisible"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCodenummerRater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Codenummer Rater:"
        android:layout_marginTop="@dimen/radioElementsMargin"
        android:layout_marginBottom="@dimen/radioElementsMargin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextRater"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/textFieldHeight"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/hint_Dateneingabe"
        android:ems="10"
        android:padding="@dimen/editTextPaddingStart"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/radioElementsMargin"
        android:layout_marginBottom="@dimen/radioElementsMargin"/>

    <TextView
        android:id="@+id/textViewFehlerhaftRater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fehlerhafte Eingabe"
        android:textColor="@color/annoRed"
        android:layout_gravity="center"
        android:paddingStart="8dp"
        android:visibility="invisible"/>
</LinearLayout>


    <Button
        android:id="@+id/buttonBeginn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Beginn"
        android:layout_marginTop="@dimen/radioElementsMargin" />


</LinearLayout>
</ScrollView>